--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ body, html {
     position: absolute;
     margin: 270px 0 0 30px;
     border-radius: 10px;
-    z-index: 2;
+    z-index: 65;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
 }
 
 #hero .active a::before {
@@ -217,7 +218,7 @@ section {
     border-bottom: 1px solid var(--Darkgray);
     width: 20%;
     left: 40%;
-    margin: -205px 0 0 -5px;
+    margin: 30px 0 0 -5px;
     opacity: 0.3;
 }
 
@@ -237,7 +238,7 @@ section {
     color: var(--Black);
     font-weight: 700;
     border-radius: 30px;
-    font-size: 12px;
+    height: 15px;
 }
 
 #stats .bar {
@@ -257,7 +258,7 @@ section {
     align-items: center;
     text-align: center;
     width: 90%;
-    height: 200vh;
+    height: 162vh;
     border-radius: 10px;
     background-color: white;
     margin: 0 0 0 0;
@@ -274,10 +275,9 @@ section {
 }
 
 #about > div .cards {
-    height: 160vh;
+    height: 130vh;
     width: 100%;
     margin: auto;
-    background-color: coral;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -286,6 +286,7 @@ section {
 #about .title {
     font-weight: 700;
     color: var(--Black);
+    font-size: 16px;
 }
 
 #about .price {
@@ -294,11 +295,75 @@ section {
     margin: -10px 0 20px 0;
 }
 
-#about .card .h4 {
-    text-align: left;
+#about .card {
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+    margin: 1vh 0 3vh 0;
+    border: 1px solid var(--Darkgray);
+    border-radius: 10px;
 }
 
-#about .card > span, p {
+#about .card .h4 {
+    text-align: left;
+    margin: 30px 0 -10px 0;
+}
+
+#about .card > div span, p {
     display: inline-block;
+    margin: 50px 0 10px 0;
+}
+
+#about .card > div span {
+    font-weight: 700;
+}
+
+#about .card > div p {
+    margin: 0 0 0 5px;
+}
+
+#about .card > div .select.btn {
+    background-color: var(--Moderatecyan);
+    border: none;
+    outline: none;
+    color: white;
+    font-family: var(--comissioner);
+    font-size: 15px;
+    padding: 5px 5px;
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    margin: 30px 0 10px 0;
+}
+
+#about .card > div .select.btn:hover {
+    cursor: pointer;
+    background-color: var(--Darkcyan);
+}
+
+#about .card > div .stock.btn:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+#about .card > div .stock.btn {
+    background-color: var(--Darkgray);
+    border: none;
+    outline: none;
+    color: white;
+    font-family: var(--comissioner);
+    font-size: 15px;
+    padding: 5px 5px;
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    margin: 30px 0 10px 0;
+}
+
+#about .card:nth-child(3) {
+    opacity: 0.3;
 }
 
